# MoonGlare

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GlobalConfiguration.h  Log.cpp  Log.h  MathConstants.h  MazeGame.sln  README.md  RoadMap.ldep  StreamUtils.h  Thread.h  UnusedCode.h  Version.h  Version.xml  XMLUtils.h  compilation.md  pch.cpp  pch.h  premake5.lua
src/generic_engine/: CMakeLists.txt  standalone_application.cpp
src/lib/engine_core/: CMakeLists.txt  engine_core.cpp  engine_runner.cpp  engine_runner.hpp
src/lib/engine_core/disabled/: ComponentEvents.h  ComponentScriptWrapBase.h  EntityManager.cpp  EntityManager.h  EventDispatcher.cpp  Scene.Events.hpp  SubsystemManager.cpp  SubsystemManager.h  iSubsystem.h
src/lib/engine_core/disabled/modules/: lua_async_loader.cpp  lua_async_loader.hpp
src/lib/engine_core/include/: engine_configuration.hpp  engine_core.hpp  engine_runner.hpp
src/lib/engine_core/include/core/: engine_core.hpp  engine_runner_interface.hpp  engine_time.hpp  stepable_interface.hpp  stop_interface.hpp  threaded_async_loader.hpp
src/lib/engine_core/include/ecs/: array_index_tree.hpp  component_array.hpp  component_info.hpp  component_interface.hpp  ecs_configuration.hpp  ecs_register.hpp  entity_manager.hpp  entity_manager_interface.hpp  generation_buffer.hpp  pointer_memory_array.hpp  system_info.hpp  system_interface.hpp
src/lib/engine_core/include/engine_runner/: engine_core.hpp  engine_runner.hpp  engine_runner_hooks.hpp  engine_runner_interface.hpp
src/lib/engine_core/src/: engine_core.cpp  engine_runner.cpp  threaded_async_loader.cpp  threaded_async_loader.hpp
src/lib/engine_core/test/: array_index_tree_catchtest.cpp
src/lib/glfw_context/: CMakeLists.txt
src/lib/glfw_context/src/: glad.c  glfw_context.cpp  glfw_window_handler.cpp
src/lib/lua_context/: CMakeLists.txt
src/lib/lua_context/disabled/: ErrorReporting.h
src/lib/lua_context/src/: lua_context_build_config.hpp  lua_error_handling.cpp  lua_error_handling.hpp  lua_exec_string.hpp  lua_reader.hpp  lua_script_context.cpp
src/lib/renderer/: CMakeLists.txt  Configuration.Renderer.h  Light.h  Material.h  PassthroughShaderDescriptor.h  RenderDevice.cpp  RenderDevice.h  Renderer.cpp  Renderer.h  ScriptApi.cpp  ScriptApi.h  StaticFog.h  TextureRenderTask.cpp  iContext.h  iContextInputHandler.h  iRendererFacade.h  nfRenderer.h  pch.h
src/lib/renderer/Commands/: CommandQueue.cpp  CommandQueue.h  MemoryCommands.h
src/lib/renderer/Configuration/: Mesh.h
src/lib/renderer/Deferred/: DeferredFrameBuffer.cpp  DeferredFrontend.cpp  DeferredPipeline.cpp  DeferredPipeline.h  StencilShader.h
src/lib/renderer/Device/: DeviceInfo.cpp  DeviceInfo.h  ErrorHandler.cpp  GLFWContext.cpp  GLFWContext.h  Types.h
src/lib/renderer/Resources/: MaterialManager.cpp  MaterialManager.h  ResourceManager.cpp  ResourceManager.h  ShadowMap.cpp
src/lib/renderer/src/: CommandQueueBase.h  CommandQueueLayers.h  base_render_target.cpp  base_render_target.hpp  command_queue.cpp  command_queue.hpp  frame_buffer.cpp  frame_buffer.hpp  frame_sink.cpp  opengl_device_info.cpp  opengl_device_info.hpp  opengl_error_handler.cpp  opengl_error_handler.hpp  rendering_device.cpp
src/lib/sound_system/: CMakeLists.txt
src/lib/sound_system/Component/: PlaybackWatcher.h  SoundSourceSystem.cpp
src/lib/sound_system/src/: HandleApi.cpp  HandleApi.hpp  OpenAl.hpp  SoundSystem.cpp  SoundSystem.hpp  StateProcessor.cpp  StateProcessor.hpp  WorkThread.cpp  WorkThread.hpp
src/lib/test_main/: CMakeLists.txt
src/lib/test_main/src/: catchtest_main.cpp  gtest_main.cpp
src/lib/tool_base_qt/: ActionBarSink.h  CMakeLists.txt  CodeEditor.cpp  LuaLinter.cpp  MainWindowTabs.h  QtLogSink.h  QtLuaHighlighter.cpp  QtLuaHighlighter.h  UserQuestions.h  change_container.hpp  code_editor.cpp  code_editor.h  custom_enum_provider.hpp  custom_type_editor.hpp  dock_window.cpp  dock_window.hpp  dock_window_info.cpp  dock_window_info.hpp  editor_provider.h  file_icon_info.hpp  file_processor.h  issue_reporter.hpp  lua_linter.cpp  lua_linter.h  main_window_tabs.hpp  project.lua  qt_log_sink.h  qt_lua_highlighter.cpp  qt_lua_highlighter.h  tool_base_qt_module_registration.cpp  tool_base_qt_module_registration.h  user_questions.cpp  user_questions.hpp  window_provider.hpp
src/lib/tool_base_qt/runtime_modules/: basic_icons_provider_module.cpp  basic_icons_provider_module.hpp  changes_manager.cpp  changes_manager.h  changes_manager_module.cpp  changes_manager_module.hpp  custom_enum_provider_module.cpp  custom_enum_provider_module.hpp  custom_type_editor_module.cpp  custom_type_editor_module.hpp  editor_provider_module.cpp  editor_provider_module.hpp  file_icon_provider_module.cpp  file_icon_provider_module.hpp  issue_reporter_module.cpp  issue_reporter_module.hpp  widget_settings_provider.cpp  widget_settings_provider.hpp
src/tools/editor/: CMakeLists.txt  filesystem_viewer_preview.hpp  main.cpp
src/tools/editor/dialogs/: main_window.cpp  main_window.hpp  main_window.ui
src/tools/editor/docks/: filesystem_viewer.cpp  filesystem_viewer.hpp  filesystem_viewer.ui  issue_report_dock.cpp  issue_report_dock.hpp  pending_changes.cpp  pending_changes.hpp  pending_changes.ui
src/tools/editor/modules/: async_file_processor.cpp  async_file_processor.hpp  editor_provider_module.cpp  editor_provider_module.h  filesystem_module.cpp  filesystem_module.hpp  json_processor.cpp
src/tools/editor/widgets/: entity_editor_widget.cpp  entity_editor_widget.hpp  entity_editor_widget.ui  entity_editor_widget_item_delegate.cpp  entity_editor_widget_item_delegate.hpp
src/tools/mdmp/: CMakeLists.txt  main.cpp  project.lua
src/tools/recon-gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/tools/svfs-cli/: CMakeLists.txt  arguments.cpp  arguments.h  luainterface.cpp  luainterface.h  luasupport.h  main.cpp  sound_system_integration.cpp  sound_system_integration.hpp  sound_system_intetration.cpp  svfs_lua.cpp  svfs_lua.h
src/tools/svfs-cli/scripts/: actions.lua  modules.lua  sound_system.lua  vfs.lua
(+2805 files in other folders)
